public/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
  box-sizing: border-box;
}

header {
  height: 15svh;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: clamp(1.5rem, -0.375rem + 6vw, 3rem);
  background-color: rgb(84, 114, 139);
  border-radius: 80px;
  margin: 0.8rem;
  margin-bottom: 1rem;
  border: solid 2px;
}

.currentMonthContainer {
  display: flex;
  gap: 2rem;
}

#monthBack {
  cursor: pointer;
}

#monthForward {
  cursor: pointer;
}

.welcomeSegment {
  text-align: center;
  font-size: clamp(1.5rem, -2.5rem + 5vw, 2.5rem);
  padding: 25px 50px;
  border-top-right-radius: 55px;
  border-top-left-radius: 55px;
  background-color: rgb(230, 230, 107);
}

.activeTodo {
  list-style: none;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.todoTitle {
  font-size: 1.5rem;
}

.todoDate {
  font-size: 1rem;
}

.todoBtns {
  display: flex;
  flex-direction: column;
  padding: 0px 26px;
  gap: 1rem;
}

.addNewTodo {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 1rem;
  padding: 50px 0px;
}

.inputContainer {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

.todoText {
  font-size: 1.3rem;
  border-bottom: none;
  /* text-align: center; */
  display: flex;
  flex-direction: column;
  border-top-left-radius: 35px;
  border-top-right-radius: 35px;
  height: 120px;
  resize: none;
  padding: 10px 20px;
}

.chooseTodoDate {
  padding: 0px 10px;
  height: 50px;
  text-align: center;
  font-size: 0.8rem;
  border: solid 1px;
  border-top: none;
  border-bottom-left-radius: 35px;
  border-bottom-right-radius: 35px;
}

.addTodo {
  font-size: 26px;
  border: solid 1px;
  border-radius: 55px;
  padding: 15px 25px;
  background-color: white;
  font-size: 1rem;
}

.addTodo:hover {
  background-color: rgb(202, 202, 202);
}

main {
  height: calc(100svh - 190px);
  display: flex;
  gap: 1rem;
  margin: 0.8em;
}

aside {
  height: calc(100svh - 190px);
  width: 30%;
  border: solid 2px;
  border-radius: 55px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.activeTodoContainer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 40px;
  width: 100%;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.addTodo {
  float: right;
  cursor: pointer;
  border: 1px solid;
  border-radius: 20px;
  font-size: 1rem;
}

.addNewTodo {
  display: flex;
}

.content .text {
  border: none;
}

.activeTodoContainer .task {
  display: flex;
  justify-content: space-between;
  padding: 1rem;
  margin-bottom: 1rem;
}

.activeTodoContainer .task .content {
  flex: 1 1 0%;

}

.activeTodoContainer .task .content .text {
  width: 100%;
  display: block;
}

.activeTodoContainer .task .actions {
  display: flex;
}

.task .actions button {
cursor: pointer;
margin: 0 0.5rem;
font-weight: 700;
}

.todoContainer {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.calenderContainer {
  width: calc(100% - 30%);
  border: solid 2px;
  border-radius: 55px;
  height: calc(88vh);
}

.daysName {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: repeat(1, 1fr);
  list-style: none;
  padding: 2rem 0rem;
  background-color: rgb(179, 82, 82);
  border-top-left-radius: 50px;
  border-top-right-radius: 50px;
}

.daysName li {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: clamp(1rem, -2.2625rem + 5vw, 2.5rem);
  padding: 0.5rem;
  font-weight: bold;
}

.dateContainer {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: repeat(5, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

.date {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1.5rem 0.5rem;
  margin-top: 0.5rem;

  font-size: clamp(1.5rem, -2.2625rem + 5vw, 2.5rem);
  border-radius: 9rem;
}
.date:hover {
  background-color: aliceblue;
}

@media only screen and (max-width: 1025px) {
  main {
    height: calc(100svh - 190px);
    display: flex;
    flex-direction: column-reverse;
    justify-content: start;
  }

  .addNewTodo {
    flex-direction: column;
  }

  .todoContainer {
    width: 100%;
    height: 100svh;
  }

  .inputContainer {
    width: 300px;
  }

  .addNewTodo {
    justify-content: end;
    padding: 20px;
  }

  aside {
    height: 100svh;
    width: 100%;
    margin: 0;
    padding: 0;
    align-items: normal;
  }

  .calenderContainer {
    width: 100%;
    margin: 0;
    padding: 0;
  }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
}

